@@ -1,1 +1,5 @@
 # BobTheExplorer
+javafx.controls,javafx.fxml,javafx.media
+--add-exports=javafx.base/com.sun.javafx=ALL-UNNAMED
+--add-exports=javafx.media/com.sun.media.jfxmedia=ALL-UNNAMED
+--add-exports=javafx.media/com.sun.media.jfxmedia.locator=ALL-UNNAMED
